[package]
name = "tiny-nix-ipc"
version = "0.0.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Unix", "IPC", "Socket", "FdPassing", "serde" ]
categories = ["os::unix-apis"]
description = "Minimal wrapper for using sockets as IPC with file descriptor passing"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/tiny-nix-ipc"
repository = "https://github.com/myfreeweb/tiny-nix-ipc"

[features]
cbor = ["serde", "serde_cbor"]

[dependencies]
nix = "0.11"
serde = { version = "1.0", optional = true }
serde_cbor = { version = "0", optional = true }

[dev-dependencies]
shmemfdrs = "0"
