[package]
name = "tiny-nix-ipc"
version = "0.1.0"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Unix", "IPC", "Socket", "FdPassing" ]
categories = ["os::unix-apis"]
description = "Minimal wrapper for using sockets as IPC with file descriptor passing"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/tiny-nix-ipc"
repository = "https://github.com/myfreeweb/tiny-nix-ipc"

[features]
ser_cbor = ["serde", "serde_cbor"]
ser_json = ["serde", "serde_json"]
ser_bincode = ["serde", "bincode"]

[dependencies]
nix = "0.11"
error-chain = "0"
serde = { version = "1.0", optional = true }
serde_cbor = { version = "0", optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.0", optional = true }

[dev-dependencies]
shmemfdrs = "0"
