[package]
name = "tiny-nix-ipc"
version = "0.1.1"
authors = [ "Greg V <greg@unrelenting.technology>" ]
keywords = [ "System", "Unix", "IPC", "Socket", "FdPassing" ]
categories = ["os::unix-apis"]
description = "Minimal wrapper for using sockets as IPC with file descriptor passing"
license = "Unlicense"
readme = "README.md"
homepage = "https://github.com/myfreeweb/tiny-nix-ipc"
repository = "https://github.com/myfreeweb/tiny-nix-ipc"

[features]
ser_cbor = ["serde", "serde_cbor"]
ser_json = ["serde", "serde_json"]
ser_bincode = ["serde", "bincode"]
zero_copy = ["zerocopy"]

[dependencies]
nix = "0.15"
error-chain = "0.12"
serde = { version = "1.0", optional = true }
serde_cbor = { version = "0", optional = true }
serde_json = { version = "1.0", optional = true }
bincode = { version = "1.0", optional = true }
zerocopy = { version = "0.2", optional = true }

[dev-dependencies]
shmemfdrs = "0.1"
